--- a/active-learning.tex
+++ b/active-learning.tex
@@ -440,8 +440,8 @@ Após cada consulta, caso a classe real seja diferente da esperada,
 o método recorre à estratégia de amostragem por incerteza (Seção \ref{unc})
 como medida de contingência.
 No artigo original, optou-se pela entropia como função objetivo.
-Outras medidas tmabém podem ser adequadas, dependendo da meta,
-como a acurácia balanceada (Seção \ref{metricas}).
+Outras medidas também podem ser adequadas, dependendo da meta,
+como a acurácia balanceada ou kappa multiclasse (Seção \ref{metricas}).
 
 \subsection{Impacto esperado no modelo}
 \ano{EER e EMC fazem amostragem de 100}
