--- a/apendice2.tex
+++ b/apendice2.tex
@@ -3,13 +3,13 @@ Neste apêndice são apresentados detalhes adicionais dos experimentos reportados
 nos capítulos \ref{experimentos} e \ref{aml}.
 
 \section{Descrição das bases de dados}
-
 \input dataset-tables
 
 \section{Acurácia dos classificadores}
 Os valores de acurácia empregados na comparação de algoritmos de aprendizado
 exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0},
 \ref{tab:balaccClassif1} e \ref{tab:balaccClassif2}.
+\input{classifsTab}
 
 \section{Acurácia das estratégias}
 \esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados?}
