--- a/stratsfriedRFw.tex
+++ b/stratsfriedRFw.tex
@@ -11,7 +11,7 @@
 7 - \textbf{HTUman}	&   &   &   &   & * &   & - &   &   &   &   &   & * & * & * &   &   &   &   &   & * & * \\
 8 - \textbf{HTUmah}	&   &   &   &   & + &   &   & - &   &   &   &   & * & * & * &   &   &   &   &   & * & * \\ \hline
 9 - \textbf{SGmulti}	& * &   & * & * & * & * & * & * & - & * &   &   & * & * & * & * & * & * &   &   & * & * \\
-10 - QBC  	&   &   &   &   &   &   &   &   &   & - &   &   &   & . &   &   &   &   &   &   &   & . \\ \hline
+10 - QBCRFw	&   &   &   &   &   &   &   &   &   & - &   &   &   & . &   &   &   &   &   &   &   & . \\ \hline
 11 - Ent  	& * &   & * & * & * & * & * & * &   & * & - &   & * & * & * & * & + & * &   &   & * & * \\
 12 - Mar  	& * & * & * & * & * & * & * & * &   & * &   & - & * & * & * & * & * & * &   &   & * & * \\ \hline
 13 - DWeuc	&   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   \\
