--- a/stratstab5NN.tex
+++ b/stratstab5NN.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 1-abalone 3class &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.53/  0.03 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.53/  0.03 \\
 2-arcene &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.78/  0.05 &   0.80/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.81}}/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.80/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.81}}/  0.05 &   0.77/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.76/  0.05 \\
 3-artificial charact... &   0.37/  0.02 &   0.37/  0.02 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.01}} &   0.40/  0.02 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.01}} &   0.40/  0.02 &   0.40/  0.02 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.01}} &   0.37/  0.02 &   0.38/  0.02 &   0.38/  0.02 \\
 4-autoUniv au1 1000 &   0.54/  0.03 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/  0.03 &   0.54/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 33-leukemia haslinger &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 &   0.79/  0.08 &   0.77/  0.08 &   0.79/  0.07 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 &   0.79/  0.08 &   0.77/  0.08 &   0.79/  0.07 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} &   0.72/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.72/\textcolor{black}{\textbf{  0.03}} &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.68}}/  0.05 &   0.70/\textcolor{black}{\textbf{  0.03}} \\
 35-mfeat fourier &   0.64/  0.03 &   0.63/  0.02 & \underline{\textcolor{blue}{\textbf{  0.68}}}/  0.02 & \textcolor{black}{\textbf{  0.67}}/  0.02 & \textcolor{black}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.67}}/  0.02 & \textcolor{black}{\textbf{  0.67}}/  0.02 &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.64/  0.03 &   0.64/  0.02 &   0.63/  0.03 \\
 36-molecular promotor... & \textcolor{black}{\textbf{  0.78}}/  0.06 &   0.77/  0.07 &   0.77/  0.06 &   0.77/  0.07 &   0.77/  0.06 & \textcolor{black}{\textbf{  0.78}}/  0.06 & \textcolor{black}{\textbf{  0.78}}/  0.07 &   0.77/  0.07 & \textcolor{black}{\textbf{  0.78}}/  0.06 & \textcolor{red}{\textbf{  0.76}}/  0.06 &   0.77/  0.06 \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 65-statlog heart &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.76}}/  0.04 &   0.75/  0.05 &   0.75/  0.04 &   0.74/  0.04 &   0.75/  0.04 &   0.75/  0.04 &   0.74/  0.04 &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/  0.04 &   0.74/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.76}}/  0.04 &   0.75/  0.05 &   0.75/  0.04 &   0.74/  0.04 &   0.75/  0.04 &   0.75/  0.04 &   0.74/  0.04 &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/  0.04 &   0.74/  0.04 \\
 66-statlog image segm... &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.84/  0.02 & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.80/  0.02 &   0.80/  0.02 \\
 67-statlog landsat sa... &   0.78/  0.03 &   0.80/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.03 &   0.77/  0.04 &   0.77/  0.05 \\
 68-statlog vehicle si... &   0.58/  0.03 &   0.58/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.03 &   0.57/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} \\
