--- a/stratstabNB.tex
+++ b/stratstabNB.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 1-abalone 3class &   0.54/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.43}}/  0.05 &   0.52/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.54/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.43}}/  0.05 &   0.52/  0.04 \\
 2-arcene &   0.67/  0.05 &   0.68/  0.05 &   0.68/  0.05 &   0.67/  0.05 & \textcolor{red}{\textbf{  0.66}}/  0.05 &   0.70/  0.05 &   0.70/  0.05 & \textcolor{blue}{\textbf{  0.71}}/  0.05 &   0.69/  0.05 &   0.69/  0.05 &   0.70/  0.06 \\
 3-artificial charact... &   0.13/  0.02 &   0.13/  0.02 &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.12/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.02 & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.02 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.80/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.79}}/  0.07 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.80/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.79}}/  0.07 \\
 34-mammographic mass &   0.78/  0.03 & \textcolor{black}{\textbf{  0.79}}/  0.03 & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.80}}}/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.79}}/  0.03 &   0.78/  0.03 & \textcolor{red}{\textbf{  0.73}}/  0.05 &   0.78/  0.03 \\
 35-mfeat fourier &   0.63/\textcolor{darkgreen}{\textbf{  0.01}} &   0.63/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.53/  0.03 \\
 36-molecular promotor... &   0.84/\textcolor{black}{\textbf{  0.04}} &   0.83/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 65-statlog heart &   0.77/  0.04 &   0.76/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{red}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.77/  0.04 &   0.76/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{red}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.04 \\
 66-statlog image segm... &   0.78/  0.02 &   0.80/  0.02 &   0.81/\textcolor{black}{\textbf{  0.01}} &   0.82/\textcolor{black}{\textbf{  0.01}} &   0.81/  0.02 &   0.84/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.85}}/  0.02 & \textcolor{blue}{\textbf{  0.85}}/  0.02 &   0.83/  0.02 &   0.81/  0.02 &   0.79/  0.02 \\
 67-statlog landsat sa... &   0.74/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.62}}/  0.04 &   0.66/  0.03 \\
 68-statlog vehicle si... &   0.47/\textcolor{black}{\textbf{  0.02}} &   0.45/\textcolor{black}{\textbf{  0.02}} &   0.47/  0.03 &   0.46/  0.03 &   0.47/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.49}}/  0.04 &   0.48/\textcolor{black}{\textbf{  0.02}} &   0.48/  0.03 &   0.47/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.44}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.50}}}/  0.04 \\
