--- a/tese.tex
+++ b/tese.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt,twoside]{book}
-
+\usepackage{scrextend}
 % \usepackage{cite}
 % \usepackage[pdftex]{graphicx}
 % \usepackage{array}
