--- a/arvorealg.tex
+++ b/arvorealg.tex
@@ -9,24 +9,27 @@ decision tree/.style={sibling distance=3cm, level distance=2cm},
 cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
 }
 \begin{center}
-\caption{Distribuição das vitórias.
-\textit{Uma colocação entre as três melhores é contabilizada como vitória.
-% As $25\%$ menos frequentes são representadas pela categoria ``outras''.
+\caption{Distribuição das estratégias vencedoras de acordo com o algoritmo usado e
+características de cada base.
+\textit{As folhas apresentam a frequência de vitórias das estratégias.
+Uma colocação entre as três melhores é contabilizada como vitória.
+As $25\%$ menos frequentes são representadas pela categoria ``demais''.
+Mínimo de $40$ exemplos por folha.}
 }
-}
-\scalebox{0.9}{
 \begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
 text width=2.7cm, align=flush center, grow cyclic,
-level 1/.style={level distance=3cm,sibling angle=60},
-level 2/.style={text width=2cm, font=\footnotesize, level distance=3.5cm,sibling angle=60},
+level 1/.style={level distance=3.3cm,sibling angle=60},
+level 2/.style={text width=2cm, font=\footnotesize, level distance=3.3cm,sibling angle=60},
 level 3/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-level 4/.style={text width=2cm, font=\footnotesize, level distance=3.1cm,sibling angle=75},
+level 4/.style={text width=2cm, font=\footnotesize, level distance=3.1cm,sibling angle=45},
 level 5/.style={text width=2cm, font=\footnotesize, level distance=2.85cm,sibling angle=45},
 ]
-\input treeALCKappa
-\label{treeALCKappa}
+\input treeLearnerfalse
+\label{tree1}
 \end{tikzpicture}
-}
 \end{center}
 \end{figure}
 \end{landscape}\clearpage}
+
+
+
