--- a/passiveDists.tex
+++ b/passiveDists.tex
@@ -1,12 +1,12 @@
 \begin{table}[h]
-\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente.}
+\caption{Similaridade entre algoritmos de aprendizado de acordo com a medida kappa para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente.}
 \begin{center}\begin{tabular}{lcc|cc|cc|c}
- 				& 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM \\5NN	& - &   0.47 & \textbf{  0.53} & \textbf{  0.50} & \textcolor{red}{\textbf{  0.46}} & \textbf{  0.53} & \textcolor{blue}{\textbf{  0.55}} \\
-C4.5w	& \textcolor{red}{\textbf{  0.47}} & - &   0.48 & \textcolor{red}{\textbf{  0.47}} & \textcolor{blue}{\textbf{  0.55}} & \textbf{  0.51} & \textbf{  0.50} \\ \hline
-CIELM	& \textbf{  0.53} &   0.48 & - & \textcolor{blue}{\textbf{  0.64}} &   0.47 & \textcolor{red}{\textbf{  0.46}} & \textbf{  0.51} \\
-ELM	& \textbf{  0.50} &   0.47 & \textcolor{blue}{\textbf{  0.64}} & - & \textcolor{red}{\textbf{  0.42}} &   0.45 & \textbf{  0.50} \\ \hline
-NB	&   0.46 & \textcolor{blue}{\textbf{  0.55}} &   0.47 & \textcolor{red}{\textbf{  0.42}} & - &   0.47 &   0.46 \\
-RFw	& \textbf{  0.53} & \textbf{  0.51} &   0.46 & \textcolor{red}{\textbf{  0.45}} &   0.47 & - & \textcolor{blue}{\textbf{  0.62}} \\ \hline
-SVM	& \textbf{  0.55} & \textbf{  0.50} & \textbf{  0.51} & \textbf{  0.50} & \textcolor{red}{\textbf{  0.46}} & \textcolor{blue}{\textbf{  0.62}} & - \\\end{tabular}\label{passiveDists}
+ 				& 5NN & C4.5w & CIELM & NB & RFw & SVM & VFDTw \\5NN	& - &   0.37 & \textcolor{blue}{\textbf{  0.42}} &   0.35 &   0.39 &   0.41 & \textcolor{red}{\textbf{  0.32}} \\
+C4.5w	&   0.37 & - &   0.38 &   0.41 &   0.42 & \textcolor{blue}{\textbf{  0.43}} & \textcolor{red}{\textbf{  0.31}} \\ \hline
+CIELM	& \textcolor{blue}{\textbf{  0.42}} &   0.38 & - &   0.37 &   0.35 &   0.41 & \textcolor{red}{\textbf{  0.33}} \\
+NB	& \textcolor{red}{\textbf{  0.35}} & \textcolor{blue}{\textbf{  0.41}} &   0.37 & - & \textcolor{red}{\textbf{  0.35}} &   0.36 &   0.36 \\ \hline
+RFw	&   0.39 &   0.42 &   0.35 &   0.35 & - & \textcolor{blue}{\textbf{  0.51}} & \textcolor{red}{\textbf{  0.29}} \\
+SVM	&   0.41 &   0.43 &   0.41 &   0.36 & \textcolor{blue}{\textbf{  0.51}} & - & \textcolor{red}{\textbf{  0.31}} \\ \hline
+VFDTw	&   0.32 &   0.31 &   0.33 & \textcolor{blue}{\textbf{  0.36}} & \textcolor{red}{\textbf{  0.29}} &   0.31 & - \\\end{tabular}\label{passiveDists}
 \end{center}
 \end{table}
