--- a/plot.tex
+++ b/plot.tex
@@ -10,26 +10,21 @@ Inclui apenas resultados para as bases com mais de 200 exemplos.}}
 \begin{tikzpicture}[scale=1]
 \begin{axis}[xlabel=consultas, ylabel=kappa (média), legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, yticklabel style={/pgf/number format/fixed}]
+% budget Rnd Clu ATUeuc ATUman ATUmah HTUeuc HTUman HTUmah SGmulti QBCRFw Mar TUeuc TUman TUmah EERent SVMbal
 
-\addplot+[no marks,dashed, thick, violet,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUeuc] {kappamediaall.plot};\addlegendentry{\textbf{GATUeuc}}
-\addplot+[no marks,dotted, thick, violet,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUman] {kappamediaall.plot};\addlegendentry{\textbf{GATUman}}
-\addplot+[no marks,solid, thick, violet,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamediaall.plot};\addlegendentry{\textbf{GATUmah}}
-\addplot+[no marks,dashed, gray,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUeuc] {kappamediaall.plot};\addlegendentry{TUeuc}
-\addplot+[no marks,dotted, gray,  mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUman] {kappamediaall.plot};\addlegendentry{TUman}
-\addplot+[no marks,solid, gray,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamediaall.plot};\addlegendentry{TUmah}
+\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {Kappamahamediaall.plot};\addlegendentry{Mar}
+\addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {Kappamahamediaall.plot};\addlegendentry{EERent}
+\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {Kappamahamediaall.plot};\addlegendentry{TUmah}
 
-\addplot+[no marks,solid, blue,  mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {kappamediaall.plot};\addlegendentry{Mar}
-\addplot+[no marks,dashed, ultra thick, orange, mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUeuc] {kappamediaall.plot};\addlegendentry{\textbf{ATUeuc}}
-\addplot+[no marks,dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUman] {kappamediaall.plot};\addlegendentry{\textbf{ATUman}}
-\addplot+[no marks,solid, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamediaall.plot};\addlegendentry{\textbf{ATUmah}}
+\addplot+[solid, thick, violet, mark=10-pointed star,   mark phase=84, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=HTUmah] {Kappamahamediaall.plot};\addlegendentry{\textbf{HTUmah}}
 
-\addplot+[no marks,solid, green!30!black,    mark phase=179, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {kappamediaall.plot};\addlegendentry{EERent}
-\addplot+[no marks,solid, thick, red,      mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {kappamediaall.plot};\addlegendentry{\textbf{SGmulti}}
-\addplot+[no marks,solid, thick, black,   mark phase=167, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=EERacu] {kappamediaall.plot};\addlegendentry{EERacu}
+\addplot+[solid, thick, red,   mark=x,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {Kappamahamediaall.plot};\addlegendentry{\textbf{SGmulti}}
+\addplot+[dotted, mark=star, ultra thick, orange,  mark repeat=200,  mark phase=25, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {Kappamahamediaall.plot};\addlegendentry{\textbf{ATUmah}}
 
-\addplot+[no marks,dashed, green!50!black,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamediaall.plot};\addlegendentry{Clu}
-\addplot+[no marks,dashed, olive,              mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamediaall.plot};\addlegendentry{Rnd}
-\addplot+[no marks,solid, black,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=DWeuc] {kappamediaall.plot};\addlegendentry{DWeuc}
+\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {Kappamahamediaall.plot};\addlegendentry{Clu}
+\addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {Kappamahamediaall.plot};\addlegendentry{Rnd}
+\addplot+[solid, thick, gray, mark=diamond,   mark phase=167, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=QBCRFw] {Kappamahamediaall.plot};\addlegendentry{QBCRFw}
+\addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=SVMbal] {Kappamahamediaall.plot};\addlegendentry{SVMbal}
 
 \end{axis}
 \end{tikzpicture}
