--- a/rankplot.tex
+++ b/rankplot.tex
@@ -1,55 +1,27 @@
-% \begin{figure}
-% \caption{Curvas de ranqueamento.
-%  \textit{Detalhes na Figura \ref{curvas}.}}
-% \label{curvasrank}
-% \begin{center}
-% \begin{tikzpicture}[scale=1]
-% \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
-% scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
-% 
-% \addplot+[solid, thick, violet, mark=10-pointed star,   mark phase=84, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamahmediaallRank.plot};\addlegendentry{\textbf{GATUmah}}
-% \addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamahmediaallRank.plot};\addlegendentry{TUmah}
-% 
-% \addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {kappamahmediaallRank.plot};\addlegendentry{Mar}
-% \addplot+[dotted, mark=star, ultra thick, orange,  mark repeat=200,  mark phase=25, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamahmediaallRank.plot};\addlegendentry{\textbf{ATUmah}}
-% 
-% \addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {kappamahmediaallRank.plot};\addlegendentry{EERent}
-% \addplot+[solid, thick, red,   mark=x,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {kappamahmediaallRank.plot};\addlegendentry{\textbf{SGmulti}}
-% \addplot+[solid, thick, black, mark=diamond,   mark phase=167, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERacu] {kappamahmediaallRank.plot};\addlegendentry{EERacu}
-% 
-% \addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamahmediaallRank.plot};\addlegendentry{Clu}
-% \addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamahmediaallRank.plot};\addlegendentry{Rnd}
-% \addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=DWeuc] {kappamahmediaallRank.plot};\addlegendentry{DWeuc}
-% 
-% \end{axis}
-% \end{tikzpicture}
-% \end{center}
-% \end{figure}
-% 
-% 
-% 
-% % \begin{figure}
-% % \caption{Curvas de ranqueamento.
-% %  \textit{Detalhes na Figura \ref{curvas}.}}
-% % \label{curvasrank}
-% % \begin{center}
-% % \begin{tikzpicture}[scale=1]
-% % \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
-% % scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
-% % 
-% % % \addplot+[solid, thick, violet, mark=10-pointed star,   mark phase=84, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappaallmediaallRank.plot};\addlegendentry{\textbf{GATUmah}}
-% % % \addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappaallmediaallRank.plot};\addlegendentry{TUmah}
-% % % \addplot+[dotted, mark=star, ultra thick, orange,  mark repeat=200,  mark phase=25, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappaallmediaallRank.plot};\addlegendentry{\textbf{ATUmah}}
-% % 
-% % \addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=GATUman] {kappaallmediaallRank.plot};\addlegendentry{GATUman}
-% % \addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=ATUman] {kappaallmediaallRank.plot};\addlegendentry{ATUman}
-% % \addplot+[solid, thick, red,   mark=x,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=TUman] {kappaallmediaallRank.plot};\addlegendentry{\textbf{TUman}}
-% % 
-% % \addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=GATUeuc] {kappaallmediaallRank.plot};\addlegendentry{GATUeuc}
-% % \addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=ATUeuc] {kappaallmediaallRank.plot};\addlegendentry{ATUeuc}
-% % \addplot+[solid, thick, black, mark=diamond,   mark phase=167, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUeuc] {kappaallmediaallRank.plot};\addlegendentry{TUeuc}
-% % 
-% % \end{axis}
-% % \end{tikzpicture}
-% % \end{center}
-% % \end{figure}
+\begin{figure}
+\caption{Curvas de ranqueamento.
+ \textit{Detalhes na Figura \ref{curvas}.}}
+\label{curvasrank}
+\begin{center}
+\begin{tikzpicture}[scale=1]
+\begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
+scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
+
+\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {KappamahamediaallRank.plot};\addlegendentry{Mar}
+\addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {KappamahamediaallRank.plot};\addlegendentry{EERent}
+\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {KappamahamediaallRank.plot};\addlegendentry{TUmah}
+
+\addplot+[solid, thick, violet, mark=10-pointed star,   mark phase=84, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=HTUmah] {KappamahamediaallRank.plot};\addlegendentry{\textbf{HTUmah}}
+
+\addplot+[solid, thick, red,   mark=x,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {KappamahamediaallRank.plot};\addlegendentry{\textbf{SGmulti}}
+\addplot+[dotted, mark=star, ultra thick, orange,  mark repeat=200,  mark phase=25, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {KappamahamediaallRank.plot};\addlegendentry{\textbf{ATUmah}}
+
+\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {KappamahamediaallRank.plot};\addlegendentry{Clu}
+\addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {KappamahamediaallRank.plot};\addlegendentry{Rnd}
+\addplot+[solid, thick, gray, mark=diamond,   mark phase=167, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=QBCRFw] {KappamahamediaallRank.plot};\addlegendentry{QBCRFw}
+\addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=SVMbal] {KappamahamediaallRank.plot};\addlegendentry{SVMbal}
+
+\end{axis}
+\end{tikzpicture}
+\end{center}
+\end{figure}
