--- a/stratstabC4.5w.tex
+++ b/stratstabC4.5w.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 1-abalone 3class &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{darkgreen}{\textbf{  0.01}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.55/\textcolor{black}{\textbf{  0.02}} \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{darkgreen}{\textbf{  0.01}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.55/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.03}} \\
 3-artificial charact... &   0.20/  0.02 &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.20/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.20/\textcolor{black}{\textbf{  0.01}} \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.54}}/  0.03 &   0.55/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.03 &   0.56/  0.03 &   0.55/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.03 &   0.57/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{red}{\textbf{  0.67}}/  0.07 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{red}{\textbf{  0.67}}/  0.07 \\
 34-mammographic mass &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 &   0.79/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 &   0.79/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.79/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/  0.03 &   0.79/  0.03 \\
 35-mfeat fourier &   0.45/  0.02 &   0.42/  0.03 & \textcolor{blue}{\textbf{  0.47}}/  0.02 & \textcolor{blue}{\textbf{  0.47}}/  0.02 & \textcolor{blue}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.47}}/  0.02 & \textcolor{blue}{\textbf{  0.47}}/  0.02 &   0.43/  0.02 &   0.41/  0.02 &   0.44/  0.02 \\
 36-molecular promotor... & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.71/  0.04 & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.72/  0.04 &   0.72/  0.04 &   0.72/  0.04 &   0.72/  0.05 &   0.72/  0.04 & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.72/  0.04 & \textcolor{blue}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 \\
 66-statlog image segm... &   0.68/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} &   0.69/\textcolor{black}{\textbf{  0.01}} &   0.67/  0.02 &   0.62/  0.03 &   0.68/  0.02 \\
 67-statlog landsat sa... &   0.58/  0.02 &   0.60/  0.02 &   0.60/\textcolor{black}{\textbf{  0.01}} &   0.60/\textcolor{black}{\textbf{  0.01}} &   0.59/  0.02 &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.60/\textcolor{black}{\textbf{  0.01}} &   0.60/  0.02 &   0.60/  0.02 &   0.55/  0.02 &   0.60/  0.02 \\
 68-statlog vehicle si... &   0.54/  0.03 &   0.54/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 \\
