--- a/stratstabCIELM.tex
+++ b/stratstabCIELM.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 1-abalone 3class &   0.47/  0.02 &   0.47/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.48/  0.02 &   0.44/  0.03 &   0.48/  0.02 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.47/  0.02 &   0.47/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.48/  0.02 &   0.44/  0.03 &   0.48/  0.02 \\
 2-arcene & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 \\
 3-artificial charact... &   0.18/  0.01 &   0.17/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 &   0.17/  0.01 &   0.17/  0.01 &   0.15/  0.01 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 33-leukemia haslinger &   0.60/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.60/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 \\
 34-mammographic mass &   0.69/  0.03 &   0.69/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.03 &   0.70/  0.03 &   0.69/  0.03 &   0.70/  0.03 &   0.70/  0.03 &   0.69/  0.03 &   0.72/  0.03 &   0.67/  0.03 & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} \\
 35-mfeat fourier &   0.17/\textcolor{black}{\textbf{  0.01}} &   0.15/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.14}}/\textcolor{darkgreen}{\textbf{  0.00}} &   0.20/\textcolor{black}{\textbf{  0.01}} \\
 36-molecular promotor... &   0.53/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.52}}/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 65-statlog heart &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.67/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.69}}/  0.03 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.67/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.69}}/  0.03 \\
 66-statlog image segm... &   0.53/  0.02 &   0.49/  0.02 & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} &   0.55/  0.02 &   0.38/  0.02 &   0.48/  0.02 \\
 67-statlog landsat sa... &   0.48/  0.02 &   0.45/  0.02 & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} &   0.53/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} &   0.53/\textcolor{black}{\textbf{  0.01}} &   0.50/  0.02 &   0.32/  0.02 &   0.47/  0.02 \\
 68-statlog vehicle si... &   0.47/\textcolor{black}{\textbf{  0.01}} &   0.47/\textcolor{black}{\textbf{  0.01}} &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} &   0.48/\textcolor{black}{\textbf{  0.01}} &   0.46/\textcolor{black}{\textbf{  0.01}} &   0.48/  0.02 \\
