--- a/stratstabRFw.tex
+++ b/stratstabRFw.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 1-abalone 3class & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.58}}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.05 &   0.53/  0.06 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.58}}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.05 &   0.53/  0.06 \\
 2-arcene &   0.75/  0.04 &   0.74/  0.04 &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/  0.04 &   0.70/  0.04 &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.78}}}/  0.04 &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.75/  0.04 \\
 3-artificial charact... &   0.35/  0.02 &   0.35/  0.02 &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/  0.02 &   0.35/  0.02 &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.34/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.37}}/  0.02 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/  0.02 &   0.54/  0.02 &   0.56/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.57}}/  0.02 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 33-leukemia haslinger &   0.82/  0.07 &   0.82/  0.07 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.79/  0.06 &   0.78/  0.06 & \textcolor{blue}{\textbf{  0.83}}/  0.07 &   0.79/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.83}}/  0.06 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.82/  0.07 &   0.82/  0.07 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.79/  0.06 &   0.78/  0.06 & \textcolor{blue}{\textbf{  0.83}}/  0.07 &   0.79/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.83}}/  0.06 \\
 34-mammographic mass &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 & \textcolor{red}{\textbf{  0.78}}/  0.03 &   0.79/  0.03 & \textcolor{red}{\textbf{  0.78}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} \\
 35-mfeat fourier &   0.66/  0.02 &   0.67/  0.02 &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.59/  0.02 &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.69}}/  0.02 &   0.53/  0.02 &   0.64/  0.02 \\
 36-molecular promotor... &   0.82/  0.04 &   0.80/  0.03 &   0.73/  0.03 &   0.72/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.03 & \underline{\textcolor{blue}{\textbf{  0.84}}}/  0.03 &   0.71/  0.03 & \textcolor{black}{\textbf{  0.83}}/  0.03 \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 65-statlog heart &   0.79/  0.04 &   0.78/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.80}}/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.79/  0.04 &   0.78/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.80}}/  0.04 \\
 66-statlog image segm... &   0.86/  0.02 &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.87/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.01}} &   0.88/  0.02 \\
 67-statlog landsat sa... &   0.77/  0.02 &   0.79/  0.02 &   0.77/  0.02 &   0.78/  0.02 &   0.76/  0.02 &   0.77/  0.02 &   0.77/  0.02 &   0.78/  0.02 &   0.80/  0.02 &   0.74/  0.03 &   0.76/  0.03 \\
 68-statlog vehicle si... &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.65/  0.03 &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.63/\textcolor{black}{\textbf{  0.02}} \\
