--- a/stratstabSVM.tex
+++ b/stratstabSVM.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 1-abalone 3class &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.55}}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.42}}/  0.05 &   0.52/\textcolor{black}{\textbf{  0.02}} \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.55}}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.42}}/  0.05 &   0.52/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.73/  0.04 &   0.73/  0.04 & \textcolor{red}{\textbf{  0.71}}/  0.04 & \textcolor{red}{\textbf{  0.71}}/  0.04 &   0.72/  0.04 &   0.73/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.75}}/  0.04 &   0.74/  0.04 &   0.74/  0.04 &   0.74/  0.04 \\
 3-artificial charact... &   0.25/  0.02 &   0.25/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.24/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} &   0.24/  0.02 &   0.25/  0.02 &   0.25/  0.02 & \textcolor{blue}{\textbf{  0.26}}/  0.03 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} &   0.52/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} &   0.52/  0.02 & \textcolor{red}{\textbf{  0.51}}/  0.02 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 33-leukemia haslinger &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.80/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.76}}/  0.06 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.80/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.76}}/  0.06 \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.03 & \textcolor{blue}{\textbf{  0.77}}/  0.03 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.74}}/  0.04 &   0.76/  0.03 \\
 35-mfeat fourier &   0.57/  0.02 &   0.57/  0.02 &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.58/  0.02 &   0.57/  0.02 &   0.58/  0.02 &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.59}}/  0.02 &   0.57/  0.02 &   0.55/  0.03 & \textcolor{red}{\textbf{  0.40}}/  0.07 \\
 36-molecular promotor... &   0.76/  0.04 &   0.74/  0.05 & \textcolor{red}{\textbf{  0.73}}/  0.04 & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} &   0.75/  0.04 & \textcolor{red}{\textbf{  0.73}}/  0.06 & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} &   0.75/  0.05 &   0.76/  0.04 &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/  0.05 \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBC & Ent\\ \hline 65-statlog heart &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 \\
 66-statlog image segm... &   0.75/  0.02 &   0.77/  0.02 &   0.77/\textcolor{black}{\textbf{  0.01}} &   0.77/\textcolor{black}{\textbf{  0.01}} &   0.78/\textcolor{black}{\textbf{  0.01}} &   0.78/  0.02 &   0.78/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.01}} &   0.75/  0.02 &   0.68/  0.02 &   0.62/  0.03 \\
 67-statlog landsat sa... &   0.71/  0.03 &   0.74/\textcolor{black}{\textbf{  0.02}} &   0.74/  0.03 &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.73/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.77}}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.64/  0.04 \\
 68-statlog vehicle si... &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.59/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.60/\textcolor{black}{\textbf{  0.02}} \\
